egress-restriction_08/kubernetes/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test
  namespace: egress-lab
spec:
  containers:
    - name: network-test
      image: curlimages/curl:latest
      command:
        - sleep
        - "3600"
