egress-restriction_08/kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
  namespace: egress-lab
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: []
